--- a/index.html
+++ b/index.html
@@ -1,10 +1,102 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>9457 Library</title>
-  </head>
-  <body>
-    <h1>Work in progress</h1>
-    <p>Right now this is a test page, I am learning HTML</p>
-  </body>
+<head>
+<title> 9457 Library </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Cambria;}
+
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+</style>
+</head>
+<body>
+
+<h2>Tabs</h2>
+<p>Click on the <code>buttons</code> inside the tabbed menu:</p>
+
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Coding')"> Coding </button>
+  <button class="tablinks" onclick="openCity(event, 'Building')"> Building </button>
+  <button class="tablinks" onclick="openCity(event, 'Notebook')"> Notebook </button>
+</div>
+
+<div id="Coding" class="tabcontent">
+  <h3>Coding</h3>
+  <pre><code class="language-pascal">
+    begin
+        i := 1;
+    end.
+   </code></pre>
+</div>
+
+<div id="Building" class="tabcontent">
+  <h3>Building</h3>
+  <p>Building is funky and weird</p> 
+</div>
+
+<div id="Notebook" class="tabcontent">
+  <h3>Notebook</h3>
+  <p>Notebooking is especially funky and weird</p>
+</div>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+</script>
+   
+</body>
 </html>
